[package]
name = "axum-route-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
inventory = "0.3.15"
once_cell = "1.20.2"
proc-macro2="1.0.89"
quote="1.0.37"
syn = {version = "2.0.87", features = ["full", "extra-traits", "visit"] }
uuid = { version = "1.11.0",features = ["v4"] }
axum-route-helper = { path = "../axum-route-helper" }
regex = "1.11.1"
